--- a/link.html
+++ b/link.html
@@ -7,5 +7,6 @@
 
 <a href="setting://">Settings</a>
 <a href="settings://">Settings</a>
+<a href="intent:#Intent;action=android.settings.SETTINGS;end;">open settings</a>
 </body>
 </html>
