--- a/link.html
+++ b/link.html
@@ -8,5 +8,12 @@
 <a href="setting://">Settings</a>
 <a href="settings://">Settings</a>
 <a href="intent:#Intent;action=android.settings.SETTINGS;end;">open settings</a>
+
+
+<a href="setting://network">network Settings</a>
+<a href="settings://network">network Settings</a>
+
+
+
 </body>
 </html>
