--- a/link.html
+++ b/link.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<a href="setting://">Settings</a>
+<a href="com.android.settings://">Android Settings</a>
 <a href="settings://">Settings</a>
 <a href="intent:#Intent;action=android.settings.SETTINGS;end;">open settings</a>
 
