--- a/link.html
+++ b/link.html
@@ -5,9 +5,9 @@
 </head>
 <body>
 
-<a href="com.android.settings://">Android Settings</a>
-<a href="settings://">Settings</a>
-<a href="intent:#Intent;action=android.settings.SETTINGS;end;">open settings</a>
+<a href="com.android.settings://SETTINGS">Android Settings</a>
+<a href="com.android.settings.SETTINGS://">SETTINGS Settings</a>
+<a href="intent:#Intent;action=com.android.settings.SETTINGS;end;">open settings</a>
 
 
 <a href="setting://network">network Settings</a>
