--- a/link.html
+++ b/link.html
@@ -5,15 +5,15 @@
 </head>
 <body>
 
-<a href="com.android.settings://SETTINGS">Android Settings</a>
-<a href="com.android.settings.SETTINGS://">SETTINGS Settings</a>
-<a href="intent:#Intent;action=com.android.settings.SETTINGS;end;">open settings</a>
+<a href="android.settings.SETTINGS">Android Settings</a>
+
+<a href="android.settings.DATA_ROAMING_SETTINGS"> DATA_ROAMING_SETTINGS Settings</a>
+
+<a href="android.settings.NETWORK_OPERATOR_SETTINGS"> NETWORK_OPERATOR_SETTINGS Settings</a>
+
+<a href="android.settings.APN_SETTINGS"> APN_SETTINGS Settings</a>
 
 
-<a href="setting://network">network Settings</a>
-<a href="settings://network">network Settings</a>
-
-
-
+<a href="android.settings.LOCATION_SOURCE_SETTINGS"> LOCATION_SOURCE_SETTINGS Settings</a>
 </body>
 </html>
