--- a/link.html
+++ b/link.html
@@ -5,11 +5,11 @@
 </head>
 <body>
 
-<a href="android.settings.SETTINGS">Android Settings</a>
+<a href="android.settings://SETTINGS">Android Settings</a>
 
-<a href="android.settings.DATA_ROAMING_SETTINGS"> DATA_ROAMING_SETTINGS Settings</a>
+<a href="android.settings.SETTINGS://"> DATA_ROAMING_SETTINGS Settings</a>
 
-<a href="android.settings.NETWORK_OPERATOR_SETTINGS"> NETWORK_OPERATOR_SETTINGS Settings</a>
+<a href="android://settings.SETTINGS"> NETWORK_OPERATOR_SETTINGS Settings</a>
 
 <a href="android.settings.APN_SETTINGS"> APN_SETTINGS Settings</a>
 
