--- a/link.html
+++ b/link.html
@@ -7,7 +7,7 @@
 
 <a href="android.settings://SETTINGS">Android Settings</a>
 
-<a href="android.settings.SETTINGS://"> DATA_ROAMING_SETTINGS Settings</a>
+<a href="android.settings.SETTINGS://"> T Settings</a>
 
 <a href="android://settings.SETTINGS"> NETWORK_OPERATOR_SETTINGS Settings</a>
 
