--- a/link.html
+++ b/link.html
@@ -15,5 +15,13 @@
 
 
 <a href="android.settings.LOCATION_SOURCE_SETTINGS"> LOCATION_SOURCE_SETTINGS Settings</a>
+
+
+<script>
+function openWiFiHotspotSettings(requirepassword) {
+    Android.openWiFiHotspotSettings(requirepassword);
+}
+</script>
+<a href="openWiFiHotspotSettings(true);">Open WiFi Hotspot Settings</a>
 </body>
 </html>
