--- a/link.html
+++ b/link.html
@@ -22,6 +22,6 @@ function openWiFiHotspotSettings(requirepassword) {
 
 <a href="android.settings.LOCATION_SOURCE_SETTINGS"> LOCATION_SOURCE_SETTINGS Settings</a>
 
-<a href="openWiFiHotspotSettings(true);">Open WiFi Hotspot Settings</a>
+<a href="javascript:openWiFiHotspotSettings(true);">Open WiFi Hotspot Settings</a>
 </body>
 </html>
