--- a/link.html
+++ b/link.html
@@ -17,8 +17,9 @@ function openWiFiHotspotSettings(requirepassword) {
 
 <a href="android://settings.SETTINGS"> NETWORK_OPERATOR_SETTINGS Settings</a>
 
-<a href="android.settings.APN_SETTINGS"> APN_SETTINGS Settings</a>
+<a href="divum.moneycontrol://"> moneycontrol Settings</a>
 
+<a href="com.divum.moneycontrol://">com moneycontrol Settings</a>
 
 <a href="android.settings.LOCATION_SOURCE_SETTINGS"> LOCATION_SOURCE_SETTINGS Settings</a>
 
