--- a/link.html
+++ b/link.html
@@ -24,5 +24,16 @@ function openWiFiHotspotSettings(requirepassword) {
 <a href="android.settings.LOCATION_SOURCE_SETTINGS"> LOCATION_SOURCE_SETTINGS Settings</a>
 
 <a href="javascript:openWiFiHotspotSettings(true);">Open WiFi Hotspot Settings</a>
+
+
+<a href="https://moneycontrol.com">Dynamics Settings</a>
+
 </body>
 </html>
+
+
+dynamicc 
+
+<http class="moneycob">
+    app indexing 
+</http>
