--- a/link.html
+++ b/link.html
@@ -26,7 +26,7 @@ function openWiFiHotspotSettings(requirepassword) {
 <a href="javascript:openWiFiHotspotSettings(true);">Open WiFi Hotspot Settings</a>
 
 
-<a href="https://moneycontrol.com">Dynamics Settings</a>
+<a href="https://www.moneycontrol.com/">WWW Settings</a>
 
 </body>
 </html>
