--- a/link.html
+++ b/link.html
@@ -26,7 +26,7 @@ function openWiFiHotspotSettings(requirepassword) {
 <a href="javascript:openWiFiHotspotSettings(true);">Open WiFi Hotspot Settings</a>
 
 
-<a href="https://www.moneycontrol.com/">WWW Settings</a>
+<a href="https://www.moneycontrol.com/news/business/markets/nifty-reclaims-12000-sensex-at-record-high-5-factors-driving-markets-4611271.html">TEST Settings</a>
 
 </body>
 </html>
