--- a/link.html
+++ b/link.html
@@ -28,5 +28,7 @@ function openWiFiHotspotSettings(requirepassword) {
 
 <a href="https://www.moneycontrol.com/news/business/markets/nifty-reclaims-12000-sensex-at-record-high-5-factors-driving-markets-4611271.html">TEST Settings</a>
 
+<a href="https://www.facebook.com/groups/2340896868/?fref=nf">facebook </a>
+
 </body>
 </html>
