--- a/link.html
+++ b/link.html
@@ -11,7 +11,9 @@ function openWiFiHotspotSettings(requirepassword) {
 
 <body>
 
-<a href="https://www.facebook.com/groups/2340896868/?fref=nf">facebook </a>
+<a href="https://www.moneycontrol.com/news/business/markets/nifty-reclaims-12000-sensex-at-record-high-5-factors-driving-markets-4611271.html">moneycontrol</a>
+
+<a href="https://www.facebook.com/groups/2340896868/?fref=nf">facebook</a>
 
 </body>
 </html>
